# pydantic-orm

./: .gitignore  README.md  pyproject.toml
tests/: test_pydantic_orm.py
